[package]
name = "ryptor"
version = "0.1.0"
authors = ["lesnyrumcajs <lesny.rumcajs@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
rand = "0.6.5"
base64 = "0.10.1"
hex = "0.3.2"
sha2 = "0.8.0"
aes-soft = "0.3.3"
block-modes = "0.3.2"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8.8"
base64-serde = "0.3"